Use abi3 for Python 3.14+ modern builds
- Change py314 modern builds to use abi3 targeting 3.14+
- This means future Python 3.15, 3.16, etc. on modern CPUs
  will use the same wheel (no new builds needed)
- Add 3.14 as supported PYTHON_LIMITED_API_TARGET in CMakeLists.txt
- Note: Free-threading Python doesn't support abi3, so this is
  for regular Python 3.14+ only

--- a/.github/workflows/binaries.yml
+++ b/.github/workflows/binaries.yml
@@ -311,13 +311,13 @@ jobs:
                   py2: ["311"]
                   abi3: [true]
                   abi3_target: ["3.11"]
-              # Python 3.14 on modern (newer CPU instructions)
+              # Python 3.14+ abi3 on modern (newer CPU instructions)
               - type: append
                 matrix:
                   arch: [manylinux2014-x64-modern, manylinux2014-x86-modern]
                   py2: ["314"]
-                  abi3: [false]
-                  abi3_target: [""]
+                  abi3: [true]
+                  abi3_target: ["3.14"]
               # Windows: py27, py36, py37, py38+abi3, py311+abi3
               - type: append
                 matrix:
